# creativision-clone

./: .gitignore  README.md  TODO.md  creativision-clone.kicad_pcb  creativision-clone.kicad_prl  creativision-clone.kicad_pro  creativision-clone.kicad_sch  decody.py  fp-lib-table  sym-lib-table
CreatiVision.pretty/: Cartridge_Slot_36p.kicad_mod
Reference/: Keymappings_v2-1.xlsx
v1-creativision-snes-pcb/: .gitignore  fp-lib-table  sym-lib-table  v1-creativision-snes-pcb.kicad_pcb  v1-creativision-snes-pcb.kicad_prl  v1-creativision-snes-pcb.kicad_pro  v1-creativision-snes-pcb.kicad_sch
v1-creativision-snes-pcb/74lvc245.pretty/: DIP20-2.54-26.2X7.62MM.kicad_mod  LOGIC-SN74LVC245AN_DIP20-7.62MM_.kicad_sym  LOGIC-SN74LVC245AN_DIP20-7.62MM_.step
v1-creativision-snes-pcb/MD-60FC/: CUI_MD-60FC.kicad_mod  MD-60FC.kicad_sym
v1-creativision-snes-pcb/RP2040/: MCU_RaspberryPi_and_Boards.lib
v1-creativision-snes-pcb/firmware/creativision-gamepad-keyboard-v1/: .gitignore  CMakeLists.txt  README.md  creativision-gamepad-keyboard-v1.c  flash.sh  gamepad.cpp  masks.html  ps2read.pio  snespad.cpp  snespad.h
